--- a/CaosNews/webcaosnews/templates/escribir.html
+++ b/CaosNews/webcaosnews/templates/escribir.html
@@ -36,6 +36,9 @@ Formulario de Publicación de Noticias - Caos News
                 <div class="mb-3 my-4">
                     {{ form.portada | as_crispy_field}}
                 </div>
+                <div class="mb-3 my-4">
+                    {{ form.ImagenNoticia | as_crispy_field}}
+                </div>
                 <div class="row">
                     <div class="col-lg-6 col-md-12">
                         {{ form.categoria | as_crispy_field}}
@@ -50,10 +53,11 @@ Formulario de Publicación de Noticias - Caos News
                 <div class="mb-3 pt-2">
                     {{ form.etiquetas | as_crispy_field}}
                 </div>
-        </div>
-        <div class="row justify-content-end">
-            <div class="col-sm-6 col-md-5 col-lg-1 pb-3">
-                <button  id="submit" class="btn btn-danger">Subir</button>
+            </div>
+            <div class="row justify-content-end">
+                <div class="col-sm-6 col-md-5 col-lg-1 pb-3">
+                    <button id="submit" class="btn btn-danger">Subir</button>
+                </div>
             </div>
         </div>
     </form>
@@ -61,26 +65,26 @@ Formulario de Publicación de Noticias - Caos News
 </div>
 
 {% for m in messages %}
-    {% if m.extra_tags == 'fallo' %}
-        <script>
-            Swal.fire({
-                title: '¡Error!',
-                text: '{{ m.message }}',
-                icon: 'error',
-                confirmButtonText: 'Ok'
-            })
-        </script>
-     {% else %}
-     <script>
-        Swal.fire({
-                title: '¡Bien hecho!',
-                text: "{{m}}",
-                icon: 'success',
-                confirmButtonColor: '#3085d6',
-                confirmButtonText: 'Entendido'
-            })
-    </script>
-    {% endif %}
+{% if m.extra_tags == 'fallo' %}
+<script>
+    Swal.fire({
+        title: '¡Error!',
+        text: '{{ m.message }}',
+        icon: 'error',
+        confirmButtonText: 'Ok'
+    })
+</script>
+{% else %}
+<script>
+    Swal.fire({
+        title: '¡Bien hecho!',
+        text: "{{m}}",
+        icon: 'success',
+        confirmButtonColor: '#3085d6',
+        confirmButtonText: 'Entendido'
+    })
+</script>
+{% endif %}
 {% endfor%}
 
 {% endblock contenido %}
