Se cambia el login redirect a panel

--- a/CaosNews/webcaosnews/templates/panel/panel.html
+++ b/CaosNews/webcaosnews/templates/panel/panel.html
@@ -200,6 +200,7 @@ Panel Administrativo - Caos News
 {% endblock contenido %}
 {% block script_final %}
 <script>
+    var endpoint = '/api/noticias/'
     const labels = [
         'Enero',
         'Febrero',
