Corrección final hecha en clases

--- a/CaosNews/webcaosnews/templates/panel/modificarNoticia.html
+++ b/CaosNews/webcaosnews/templates/panel/modificarNoticia.html
@@ -35,6 +35,9 @@ Formulario de Modificación de Noticias - Caos News
                 <div class="mb-3 my-4">
                     {{ form.portada | as_crispy_field}}
                 </div>
+                <div class="mb-3 my-4">
+                    {{ form.ImagenNoticia | as_crispy_field}}
+                </div>
                 <div class="row">
                     <div class="col-lg-6 col-md-12">
                         {{ form.categoria | as_crispy_field}}
