--- a/CaosNews/webcaosnews/templates/panel/panel.html
+++ b/CaosNews/webcaosnews/templates/panel/panel.html
@@ -111,7 +111,7 @@ Panel Administrativo - Caos News
                                             aria-controls="multiCollapseExample{{ forloop.counter }}">
                                             <button type="button" class="btn btn-warning mb-2" type="button"
                                                 data-bs-toggle="tooltip" data-bs-placement="right" data-bs-html="true"
-                                                title=" <u>Publicación hecha el:</u> <b>{{reg.fecha |date:"SHORT_DATE_FORMAT"}}</b>">{{reg.titulo}}</button>
+                                                title=" <u>Publicación hecha el:</u> <b> {{reg.fecha}} </b>">{{reg.titulo}}</button>
                                         </a>
                                         </p>
 
